--- a/index.html
+++ b/index.html
@@ -43,5 +43,58 @@
     <section class="section1">
       <img class="homeImg" src="image.png" />
     </section>
+    <section class="section2"><img class="img2" src="image2.png" /></section>
+    <img class="img2" src="image3.png" alt="image not found" />
+    <section class="section3">
+      <img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/29/ed7a9c6f-46fa-406a-ae55-f4e106ecaddb1664446228715-_Kurtas_for_day_festivities_UNDER_799_-1999-_from_Vishudh-_Global_Desi_-_more.jpg"
+        alt="image not found"
+      /><img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/29/a5aa15cc-ff06-499c-8d94-344c188598d31664446228723-_Premium_Traditional_wear_-_60-80_OFF_from_Soch_-_Biba_-_more.jpg"
+        alt="image not found"
+      /><img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/29/d088f69f-54eb-478d-8e2b-8dc649feb1801664446228736-adi-rbk_30-50.jpg"
+        alt="image not found"
+      /><img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/29/02fee1a9-548d-426e-a9a6-5a0dccd73a7f1664446228730-Adidas-Reebok_Sports_and_Casual_Shoes_30-50_OFF.jpg"
+        alt="image not found"
+      /><img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/29/42c07dce-3725-4e8f-9f5f-f3423b7065411664446228749-Allen_Solly_Sport-_PE_Casuals_STARTING_699_-1299-.jpg"
+        alt="image not found"
+      /><img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/29/f8bf1055-cc1b-4eb7-914c-c1610c39deab1664446228814-Best_of_Kids_International_Brands_-_Min_50_OFF.jpg"
+        alt="image not found"
+      /><img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/29/5e32b82d-abe1-437c-9cd2-ea5a7a721fa51664446228742-Allen_Solly-_Van_Heusen_-_More__-_Handbags_-Min_50.jpg"
+        alt="image not found"
+      /><img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/29/0f41129f-c253-43d8-a535-6ee9ac4153a71664446228822-Blackberry_and_Van_Hesuen_STARTING_699.jpg"
+        alt="image not found"
+      /><img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/29/56b9c750-6a59-4034-9674-1a0a3c2fec881664446228829-Boat_Airdopes_STARTING_-2990-999.jpg"
+        alt="image not found"
+      /><img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/29/37f26c69-4168-4d01-856a-8832c88ef3251664454901959-Crocs_-Sports_and_Casual_Shoes_UP_TO_50_OFF.jpg"
+        alt="image not found"
+      /><img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/29/1aadcad6-0def-4810-99be-5444866ca7861664446228865-Diwali__Collection_-_Sarees_-_Lehangas_.jpg"
+        alt="image not found"
+      /><img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/29/ff7bca4d-f571-42b0-9238-4357853c90471664446228872-Diwali_Collection_-_60-80_OFF_from__W-_Biba-_Aurelia_-_more.jpg"
+        alt="image not found"
+      />
+    </section>
   </body>
 </html>
