--- a/index.html
+++ b/index.html
@@ -96,5 +96,66 @@
         alt="image not found"
       />
     </section>
+    <section class="">
+      <img
+        class="section4"
+        src="https://assets.myntassets.com/f_webp,w_980,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/19/e5887c61-8682-4c49-b785-f2fe37ae91d31663583200397-Budget-Buys.jpg"
+        alt="image not found"
+      />
+    </section>
+    <section class="section3">
+      <img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/28/dc597425-7041-4fb9-90f2-c9f0d29d37eb1664350183584-Belts-_-Wallets_.jpg"
+        alt="image not found"
+      />
+      <img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/28/dc597425-7041-4fb9-90f2-c9f0d29d37eb1664350183584-Belts-_-Wallets_.jpg"
+        alt="image not found"
+      />
+      <img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/28/c5cb71d8-66bb-44ab-b7e8-fa0d07d265541664350183572-Beauty-Essentials.jpg"
+        alt="image not found"
+      /><img
+        class="section5img"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/28/dc597425-7041-4fb9-90f2-c9f0d29d37eb1664350183584-Belts-_-Wallets_.jpg"
+        alt="image not found"
+      /><img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/28/e2209fd7-6b1c-4b0d-9241-cb4b8b30da471664350183591-Bras-_-Briefs.jpg"
+        alt="image not found"
+      /><img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/28/47c4be8b-f6b3-4ac8-9cf6-17a03d9859c81664350183599-Casual-Shirts_.jpg"
+        alt="image not found"
+      />
+      <img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/28/00f645d9-d186-4ce0-a3f0-303749c05c351664350183605-Casual-Shoes.jpg"
+        alt="image not found"
+      /><img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/28/9c8e0801-f760-41fc-9f55-881713f975a61664350183612-Clothing-Sets_Kids.jpg"
+        alt="image not found"
+      /><img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/28/c9495ac4-7e2d-4bce-8584-f712506c92241664350183618-Clutches.jpg"
+        alt="image not found"
+      /><img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/28/3b463fa8-f6ad-4ce7-bfaa-071b988f21fb1664350183631-Dresses_Kids.jpg"
+        alt="image not found"
+      /><img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/28/f6c4bec1-74de-4b85-af62-f483e72eda221664350183625-Dresses_.jpg"
+        alt="image not found"
+      /><img
+        class="itemsImg"
+        src="https://assets.myntassets.com/f_webp,w_81,c_limit,fl_progressive,dpr_2.0/assets/images/2022/9/28/535d0e51-450f-4fcf-9ef0-fbeedbd7f18d1664350183638-Ethnic-Dresses.jpg"
+        alt="image not found"
+      />
+    </section>
   </body>
 </html>
